--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -19,7 +19,8 @@ body {
   align-items: center;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   min-height: 100vh;
-  --nav-bg: rgba(104, 197, 248, 0.7);
+  --nav-bg: rgb(49, 49, 49);
+  --nav-text-color: rgb(255, 255, 255);
   --nav-bg-ff: rgba(104, 197, 248, 0.9);
   --borders: rgb(36, 116, 248) solid 2px;
   --text-color: rgb(17, 20, 17);
@@ -82,6 +83,16 @@ main {
   padding: 0 10px;
 }
 
+nav ul {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+
+nav a, header a {
+  color: var(--nav-text-color);
+}
+
 /* ===== Classes ===== */
 .flex-center {
   display: flex;
@@ -132,3 +143,18 @@ main {
 }
 
 /* ===== Ids ===== */
+#logout-form button {
+  text-decoration: none;
+  color: var(--text-color);
+  font-weight: 600;
+  font-size: 16px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  font-family: inherit;
+}
+
+#logout-form button:hover {
+  color: var(--link-hover-color);
+}
