--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -1,19 +1,21 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block head %}
-  <link rel="stylesheet" href="css/home.css" />
+  <link rel="stylesheet" href="{% static 'css/home.css' %}" />
 {% endblock %}
 
 {% block content %}
   <div>
-    <section class="page-content flex-center">
-      <form action="{% url 'home' %}" method="post" class="login form">
-        <h1 class="flex-center">Login</h1>
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="hidden" name="next" value="{{ next }}" />
-        <button type="submit" class="btn submit">Login</button>
-      </form>
-    </section>
+    {% if not user.is_authenticated %}
+      <section class="page-content flex-center">
+        <form action="{% url 'home' %}" method="post" class="login form">
+          <h1 class="flex-center">Login</h1>
+          {% csrf_token %} {{ form.as_p }}
+          <input type="hidden" name="next" value="{{ next }}" />
+          <button type="submit" class="btn submit">Login</button>
+        </form>
+      </section>
+    {% endif %}
   </div>
 {% endblock %}
