--- a/main_app/templates/main_app/pantry_list.html
+++ b/main_app/templates/main_app/pantry_list.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block head %}
-  <link rel="stylesheet" href="css/pantry_list.css" />
+  <link rel="stylesheet" href="{% static 'css/pantry_list.css' %}" />
 {% endblock %}
 
 {% block content %}
@@ -14,4 +15,5 @@
   {% else %}
   <h1>No Pantries retrieved</h1>
   {% endif %}
+  <a href="{% url 'pantry-create' %}">Create a Pantry</a>
 {% endblock %}
