--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -41,7 +41,7 @@
       </nav>
     </header>
 
-    <main>
+    <main class="page-content flex-center">
       {% block content %}
 
       {% endblock %}
