--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -6,16 +6,14 @@
 {% endblock %}
 
 {% block content %}
-  <div>
-    {% if not user.is_authenticated %}
-      <section class="page-content flex-center">
-        <form action="{% url 'home' %}" method="post" class="login form">
-          <h1 class="flex-center">Login</h1>
-          {% csrf_token %} {{ form.as_p }}
-          <input type="hidden" name="next" value="{{ next }}" />
-          <button type="submit" class="btn submit">Login</button>
-        </form>
-      </section>
-    {% endif %}
-  </div>
+  {% if not user.is_authenticated %}
+    <section>
+      <h1 class="flex-center">Login</h1>
+      <form action="{% url 'home' %}" method="post" class="login form">
+        {% csrf_token %} {{ form.as_p }}
+        <input type="hidden" name="next" value="{{ next }}" />
+        <button type="submit" class="btn submit">Login</button>
+      </form>
+    </section>
+  {% endif %}
 {% endblock %}
