--- a/main_app/templates/main_app/pantry_form.html
+++ b/main_app/templates/main_app/pantry_form.html
@@ -2,13 +2,13 @@
 {% load static %}
 
 {% block head %}
-  <link rel="stylesheet" href="{% static 'css/pantry_form.css' %}}" />
+  <link rel="stylesheet" href="{% static 'css/pantry_form.css' %}" />
 {% endblock %}
 
 {% block content %}
   <div class="page-header flex-center">
     {% if pantry %}
-      <h1>Edit {{ pantry.name }}</h1>
+      <h1>Edit: {{ pantry.name }}</h1>
     {% else %}
       <h1>Create a Pantry</h1>
     {% endif %}
@@ -17,6 +17,14 @@
   <form action="" method="post" class="form flex-center">
     {% csrf_token %}
     <table>{{ form.as_table }}</table>
-    <button type="submit" class="btn submit">Submit</button>
+    <div class="actions">
+      {% if pantry %}
+      <a href="{% url 'pantry-detail' pantry.id %}" class="btn secondary">Cancel</a>
+      <button type="submit" class="btn confirm">Update</button>
+      {% else %}
+      <a href="{% url 'pantry-index' %}" class="btn secondary">Cancel</a>
+        <button type="submit" class="btn confirm">Create</button>
+      {% endif %}
+    </div>
   </form>
 {% endblock %}
