--- a/main_app/templates/signup.html
+++ b/main_app/templates/signup.html
@@ -10,8 +10,8 @@
   {% if error_message %}
     <p class="red-text">{{ error_message }}</p>
   {% endif %}
+  <h1>Sign Up</h1>
   <form action="" method="post" class="form-container form" autocomplete="off">
-    <h1 class="flex-center">Sign Up</h1>
     {% csrf_token %}
     <table>{{ form.as_table }}</table>
     <button type="submit" class="btn submit">Submit!</button>
