updated PantryItem property of 'units' to 'unit'

--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -15,5 +15,7 @@
         <button type="submit" class="btn submit">Login</button>
       </form>
     </section>
+    {% else %}
+    <h1>Homepage</h1>
   {% endif %}
 {% endblock %}
