--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -232,7 +232,8 @@ nav a, header a {
 /* ===== Ids ===== */
 #logout-form button {
   text-decoration: none;
-  color: var(--text-color);
+  /* color: var(--text-color); */
+  color: white;
   font-weight: 600;
   font-size: 16px;
   background: none;
