--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -24,6 +24,10 @@
               <a href="{% url 'pantry-index' %}">Pantries</a>
             </li>
             <li>
+              {% comment %} <a href="{% url 'item-index' %}">Items</a> {% endcomment %}
+              <a href="#">Items</a>
+            </li>
+            <li>
               <form id="logout-form" method="post" action="{% url 'logout' %}">
                 {% csrf_token %}
                 <button type="submit">Log out</button>
