--- a/main_app/templates/main_app/pantry_list.html
+++ b/main_app/templates/main_app/pantry_list.html
@@ -6,8 +6,8 @@
 {% endblock %}
 
 {% block content %}
-  <a href="{% url 'pantry-create' %}" style="font-size: larger;">New Pantry</a>
-  <h2>Pantries</h2>
+  <h1>Pantries</h1>
+  <a href="{% url 'pantry-create' %}" class="btn secondary">New Pantry</a>
   {% if pantry_list.count %}
     <ul>
       {% for pantry in pantry_list %}
@@ -17,6 +17,6 @@
       {% endfor %}
     </ul>
   {% else %}
-    <h1>No Pantries retrieved</h1>
+    <p>{{ pantry_list.count }} pantries</p>
   {% endif %}
 {% endblock %}
