--- a/main_app/templates/main_app/item_list.html
+++ b/main_app/templates/main_app/item_list.html
@@ -2,11 +2,12 @@
 {% load static %}
 
 {% block head %}
-
+  <link rel="stylesheet" href="{% static 'css/item_list.css' %}" />
 {% endblock %}
 
 {% block content %}
   <h1>Items</h1>
+  <a href="{% url 'item-create' %}" class="btn secondary">New Item</a>
   {% if item_list.count %}
     <ul class="flex-row-wrap">
       {% for item in item_list %}
@@ -16,6 +17,15 @@
               <img src="{{ item.image }}" alt="Image of {{ item.image }}" />
             {% endif %}
             <h2>{{ item.name }}</h2>
+            {% if item.purchase_locations.all.count %}
+              <div class="flex-row-wrap">
+                {% for loc in item.purchase_locations.all %}
+                  <p>
+                    <small>{{ loc.name }}</small>
+                  </p>
+                {% endfor %}
+              </div>
+            {% endif %}
           </li>
         </a>
       {% endfor %}
