--- a/main_app/templates/main_app/item_form.html
+++ b/main_app/templates/main_app/item_form.html
@@ -18,18 +18,8 @@
     {% csrf_token %}
     <table>{{ form.as_table }}</table>
     <div class="actions">
-      {% if item %}
-        {% if pantry %}
-          <a href="{% url 'item-detail' item.pk %}" class="btn danger">Cancel</a>
-          <button type="submit" class="btn confirm">Update</button>
-        {% else %}
-          <a href="{% url 'item-detail' item.pk %}" class="btn danger">Cancel</a>
-          <button type="submit" class="btn confirm">Update</button>
-        {% endif %}
-      {% else %}
-        <a href="{% url 'item-index' %}" class="btn danger">Cancel</a>
-        <button type="submit" class="btn confirm">Create</button>
-      {% endif %}
+      <a href="{{ request.GET.next|default:'/' }}" class="btn danger">Cancel</a>
+      <button type="submit" class="btn confirm">{{ item|yesno:'Update,Create' }}</button>
     </div>
   </form>
 {% endblock %}
