--- a/main_app/static/css/purchase_locations.css
+++ b/main_app/static/css/purchase_locations.css
@@ -4,3 +4,9 @@
   border: 2px solid black;
   border-radius: 10px;
 }
+
+.separate {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
