Full CRUD on PantryItems complete

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header>
-      <div class="image-container-v">
+      <div class="image-container-v logo">
         <a href="{% url 'home' %}">
           <img src="{% static 'images/pantry-wht.svg' %}" alt="Image of a Cupboard" />
         </a>
