--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -276,6 +276,14 @@ nav a, header a {
 .margin-top10 {
   margin-top: 10px;
 }
+
+.logo {
+  margin-left: 10px;
+}
+
+.highlight-text {
+  color: rgb(0, 115, 182)
+}
 /* ===== Ids ===== */
 #logout-form button {
   text-decoration: none;
