--- a/main_app/templates/main_app/item_list.html
+++ b/main_app/templates/main_app/item_list.html
@@ -8,7 +8,7 @@
 
 {% block content %}
   <h1>Items</h1>
-  <a href="{% url 'item-create' %}?next={{ request.path }}" class="btn secondary">New Item</a>
+  <a href="{% url 'item-create' %}?next={{ request.path }}" class="btn confirm">New Item</a>
   {% if item_list.count %}
     <ul class="flex-row-wrap">
       {% for item in item_list %}
