--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -7,7 +7,7 @@
 
 {% block content %}
   {% if user.is_authenticated %}
-    <h1>Homepage</h1>
+    <h1>ReStockr</h1>
   {% endif %}
   <div class="homepage-container">
     <div class="image-container-v homepage-image">
